# crewAI-examples

landing_page_generator/: .gitignore  main.py  pyproject.toml
landing_page_generator/src/landing_page_generator/: components.json  crew.py  expanded_idea.txt  main.py  terminalout.txt  terminalout2.txt  terminalout3.txt  testingExpandIdeaCrew.py
landing_page_generator/src/landing_page_generator/config/: agents.yaml  tasks.yaml  templates.json
landing_page_generator/src/landing_page_generator/db/: chroma.sqlite3
landing_page_generator/src/landing_page_generator/tools/: directory_tools.py  template_tools.py
landing_page_generator/src/landing_page_generator/workdir/tailwind-landing-page-template-simple-light/: package-lock.json  package.json
